--- a/src/components/body/home/sectionCarruselProductsDiscount/carruselProducts/carruselProducts.css
+++ b/src/components/body/home/sectionCarruselProductsDiscount/carruselProducts/carruselProducts.css
@@ -20,6 +20,10 @@
   border-radius: 10px;
 }
 
+.section-link{
+  display: none;
+}
+
 @keyframes scroll {
   0% {
     transform: translateX(2%);
@@ -46,4 +50,29 @@
   .card {
     height: 300px;
   }
+
+  .section-title a{
+    display: none;
+  }
+
+  .section-link{
+    display: block;
+  }
+
+  .section-link a{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 10px;
+    margin: 0 10px;
+    text-decoration: none;
+    font-size: 18px;
+    color: white;
+    height: 30px;
+    border-top: 1px solid var(--dark);
+  }
+
 }
+  
+  
+
