--- a/src/components/header/sectionHeader/contentButton.css
+++ b/src/components/header/sectionHeader/contentButton.css
@@ -1,44 +1,86 @@
-.content-button{
-    min-width: 150px;
-    box-sizing: border-box;
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
+.content-button {
+  min-width: 150px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.btn-users{
+.btn-users {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  text-decoration: none;
+  color: var(--apple-green);
+}
+
+.shopping {
+  text-decoration: none;
+  color: var(--apple-green);
+}
+
+.content-icon-search {
+  display: none;
+  background-color: transparent;
+  border: none;
+  font-size: 15px;
+  padding: 0;
+  color: var(--apple-green);
+}
+
+.dropdown-menu {
+    height: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    align-items: center;
-    gap: 5px;
-    text-decoration: none;
-    color: var(--apple-green);
+    box-sizing: border-box;
 }
 
-.shopping{
-    text-decoration: none;
-    color: var(--apple-green);
+.dropdown-button{
+    font-Size: 16px;
+    cursor: pointer;
+    border: none;
+    border-Radius: 5px;
+}
+    
+    
+
+.drop-down-content {
+    position: absolute;
+    top: 60px;
+    right: 60px;
+    background-Color: #ac1c1c;
+    box-Shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-Radius: 5px;
+    z-index: 1000;
+    height: auto;
 }
 
-.content-icon-search{
-    display: none;
+
+.dropdownItem{
+    padding: 5px 0;
+    font-size: 14px;
+    cursor: pointer;
+    width: 100%;
     background-color: transparent;
     border: none;
-    font-size: 15px;
-    padding: 0;
-    color: var(--apple-green);
+    text-decoration: none;
 }
 
-@media (max-width:600px){
-    .content-icon-search{
-        display: block;
-    }
+.dropdownItem:hover{
+    background-color:blue ;
+}
 
-    .content-button{
-        justify-content: space-around;
-    }
+@media (max-width: 600px) {
+  .content-icon-search {
+    display: block;
+  }
 
-    .btn-users p{
-        display: none;
-    }
+  .content-button {
+    justify-content: space-around;
+  }
+
+  
 }
