--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,5 @@
+
+
 .header{
     height: 60px;
     position: fixed;
@@ -5,5 +7,16 @@
     left: 0;
     width: 100%;
     box-sizing: border-box; 
-    z-index: 900;
+    z-index: 900; 
+}
+
+.section-header1{
+    height: 100px;
+      
+}
+
+@media(max-width:600px){
+    .section-header1{
+        height: 60px;
+    }
 }
