todavia en mantenimiento

--- a/src/components/body/products/sectionProducts/sectionProducts.css
+++ b/src/components/body/products/sectionProducts/sectionProducts.css
@@ -10,7 +10,8 @@
 .content-card{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 250px));
     gap: 20px;
 }
 
