--- a/src/components/body/products/products.css
+++ b/src/components/body/products/products.css
@@ -1,16 +1,15 @@
 .products{
-    margin-top: 100px;
-    background-color: red;
+    background-color: rgb(0, 47, 255);
     width: 100%;
     height: auto;
+    flex-grow: 1;
     display: flex;
     align-items:start;
     box-sizing: border-box;
+    padding: 10px 10px;
 }
 
 
 @media (max-width:600px){
-    .products{
-        margin-top: 60px;
-    }
+    
 }
