--- a/src/components/body/products/sectionProducts/cardProducts/cardProducts.css
+++ b/src/components/body/products/sectionProducts/cardProducts/cardProducts.css
@@ -1,27 +1,39 @@
+.prueba{
+    background-color: black;
+    padding: 10px;
+    border-radius: 10px;
+    width: 100%;
+    height: 330px;
+    box-sizing: border-box;
+}
+
 .container{
     width: 100%;
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content:space-between;
-    
 }
 
 .img-product{
-    height: 50%;
-    background-color: rgb(165, 105, 25);
+    height: 70%;
 }
 
 .title-product{
     margin: 0;
     padding: 0 10px;
-    height: 35%;
+    height: 30%;
     background-color: rgb(21, 117, 21);
 }
 
 .container-price-btn{
     background-color: brown;
-    height: 15%;
+    height: 10%;
     display: flex;
     justify-content:space-around;
+    align-items: center;
+}
+
+.container-price-btn p{
+    margin: 0;
 }
