--- a/src/components/header/sectionHeader/sectionHeader.css
+++ b/src/components/header/sectionHeader/sectionHeader.css
@@ -4,7 +4,7 @@
     align-items: center;
     background-color: var(--dark);
     width: 100%;
-    height: 100%;
+    height: 50px;
     box-sizing: border-box;
 }
 
