--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@ body {
 
 body {
   margin: 0;
-  box-sizing: border-box;
-  display: inline;
+  display: flex;
+  flex-direction: column;
   place-items: center;
   min-width: 100vw;
   min-height: 100vh;
@@ -14,7 +14,8 @@ body {
 
 #root {
   display: flex;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   flex-direction: column;
   text-align: center;
 }
