--- a/src/components/body/products/products.css
+++ b/src/components/body/products/products.css
@@ -1,15 +1,48 @@
-.products{
-    background-color: rgb(0, 47, 255);
-    width: 100%;
-    height: auto;
-    flex-grow: 1;
+.products {
+  background-color: rgb(0, 47, 255);
+  height: 100% !important;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.conten-btn-filter {
+  box-sizing: border-box;
+  display: none;
+  justify-content: start;
+  background-color: var(--dark);
+}
+
+.content-products {
+  height: 100%;
+  box-sizing: border-box;
+  margin-top: 13px !important;
+  display: flex;
+  overflow: hidden;
+}
+
+@media (max-width: 1379px) {
+    .content-products {
+      margin-top: 80px !important;
+    }
+}
+
+@media (max-width: 600px) {
+  .conten-btn-filter {
     display: flex;
-    align-items:start;
-    box-sizing: border-box;
-    padding: 10px 10px;
+    margin-top: 40px !important;
+  }
+
+  .contentFilters{
+    box-sizing: border-box!important;
+  }
+
+  .content-products {
+    margin-top: 0px !important;
+  }
+
+  .content-none {
+    display: none;
+  }
 }
 
-
-@media (max-width:600px){
-    
-}
