--- a/src/components/body/products/sectionProducts/cardProducts/cardProducts.css
+++ b/src/components/body/products/sectionProducts/cardProducts/cardProducts.css
@@ -1,10 +1,19 @@
 .prueba{
-    background-color: black;
+    background: linear-gradient(150deg, var(--green-blue), var(--green-lima))!important; /* Fondo translúcido */
+    backdrop-filter: blur(20px)!important; /* Desenfoque del fondo */
     padding: 10px;
-    border-radius: 10px;
     width: 100%;
     height: 330px;
-    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.2)!important; /* Borde translúcido */
+    border-radius: 15px!important; /* Bordes redondeados */
+    /* box-sizing: border-box; */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)!important; /* Sombra ligera */
+    transition: transform 0.3s ease, box-shadow 0.3s ease!important;
+}
+
+.prueba:hover{
+    transform: scale(1.05); /* Efecto de zoom al pasar el mouse */
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2); /* Sombra más intensa */
 }
 
 .container{
@@ -16,24 +25,15 @@
 }
 
 .img-product{
-    height: 70%;
+    height: 120px;
 }
 
 .title-product{
     margin: 0;
     padding: 0 10px;
-    height: 30%;
-    background-color: rgb(21, 117, 21);
+    color: var(--dark-green)!important; /* Resalta el título con un color vibrante */ 
+    font-size: 1.5rem!important;  
 }
 
-.container-price-btn{
-    background-color: brown;
-    height: 10%;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-}
 
-.container-price-btn p{
-    margin: 0;
-}
+
