--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,21 @@
-html,
 body {
-  height: 100%;
-}
-
-body {
-  margin: 0;
   display: flex;
   flex-direction: column;
   place-items: center;
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100%;
 }
 
 #root {
-  
   display: flex;
   height: 100%;
   width: 100%;
   flex-direction: column;
   text-align: center;
-  
+}
+
+.section-conten{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
