--- a/src/components/body/products/sectionProducts/sectionProducts.css
+++ b/src/components/body/products/sectionProducts/sectionProducts.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: space-between;
     overflow-y: auto;
+    scrollbar-width: none;
 }
 
 .content-card{
