--- a/src/components/body/home/sectionCarruselProductsOutstanding/carruselProductsOutstanding/productsOutstanding.css
+++ b/src/components/body/home/sectionCarruselProductsOutstanding/carruselProductsOutstanding/productsOutstanding.css
@@ -1,56 +1,45 @@
-.section-slider-outstanding {
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-    padding: 2px;
+.scroll-wrapper {
+  width: 100%;
+  height: 50vh; /* Ajusta la altura a la del 100% de la página */
+  overflow: hidden; /* Oculta el desbordamiento */
+  position: relative;
+}
+
+.scroll-content-outstanding {
+  height: 100%; /* Usa un valor fijo si es necesario, como 300px */
+  width: 100%;
+  position: relative;
+  display: flex; /* Usa flexbox para alinear en fila */
+  gap: 30px; /* Espacio entre las tarjetas */
+  /* overflow: hidden; */
+  animation: scrollOutstanding 30s linear infinite; /* Animación para desplazar */
+}
+
+.card-outstanding {
+  flex: 0 0 auto; /* Evita que las tarjetas se ajusten de tamaño automáticamente */
+  background-color: rgb(55, 160, 196);
+  margin: 10px;
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.card-outstanding img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+@keyframes scrollOutstanding {
+  0% {
+    transform: translateX(0);
   }
-  
-  .scroll-content-outstanding{
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(5, minmax(32.7%, 1fr)); /* 5 columnas */
-    gap: 10px;
-    animation: scrollOutstanding 30s linear infinite;
+  100% {
+    transform: translateX(
+      -50%
+    ); /* Mueve la mitad del contenedor para ciclo infinito */
   }
-  
-  .card-outstanding {
-    background-color: rgb(55, 160, 196);
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px;
-  }
-  
-  .section-link{
-    display: none;
-  }
-  
-  @keyframes scrollOutstanding {
-    0% {
-      transform: translateX(-68%);
-    }
-  
-    50% {
-      transform: translateX(2%);
-    }
-  
-    100% {
-      transform: translateX(-68%);
-    }
-  }
-  
-  @media (max-width: 600px) {
-    
-    .scroll-content-outstanding {
-      animation: none;
-      grid-template-columns: repeat(10, minmax(100%, 1fr));
-      overflow-x: scroll;
-      touch-action: pan-x;
-    }
-  
-    .card-outstanding {
-      height: 300px;
-    }
-  
-   
-  }
-    
+}
