--- a/src/pages/registry/registry.css
+++ b/src/pages/registry/registry.css
@@ -8,21 +8,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 1100;
 }
  
 .model-content {
-    display: flex;
-    flex-direction: column;
-  background: rgb(224, 17, 17);
+  display: flex;
+  flex-direction: column;
+  background: #2d3436 !important;
+  color: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-  width: 90%;
+  width: 100%;
   height: auto;
   max-width: 400px;
   position: relative;
   gap: 10px;
+  
 }
 
-
+@media (max-width: 600px ){
+  .model-content{
+    padding: 10px;
+  }
+}
